--- a/index.html
+++ b/index.html
@@ -6,19 +6,27 @@
         body {
             margin: 0;
             background: #000;
+            color: #fff;
+            font-family: sans-serif;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
         }
+        h1 {
+            margin-bottom: 20px;
+            font-size: 3em;
+        }
         img {
             max-width: 100%;
-            max-height: 100%;
+            max-height: 80%;
             transition: opacity 1s ease;
         }
     </style>
 </head>
 <body>
+    <h1>It’s all a lie</h1>
     <img id="mainImage" src="images/IMG_2339.JPG" alt="Cycling Image">
     <script>
         const images = [
@@ -43,4 +51,3 @@
     </script>
 </body>
 </html>
-
